--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: ChiccenAPI
 version: 0.1-SNAPSHOT
-author: friedfat
+author: proxui
 prefix: ChiccenAPI
 api-version: 1.20
-main: me.friedfat.structure.ChiccenAPI
+main: me.proxui.structure.ChiccenAPI
 libraries:
   - "net.axay:kspigot:1.20.1"
