--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: ChiccenAPI
 version: 0.1-SNAPSHOT
+description: The API for plugin development on this network
 author: proxui
 prefix: ChiccenAPI
 api-version: 1.20
 main: me.proxui.structure.ChiccenAPI
 libraries:
-  - "net.axay:kspigot:1.20.1"
+  - net.axay:kspigot:1.20.1
