--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
     paperweight.paperDevBundle '1.20.1-R0.1-SNAPSHOT'
-    implementation 'net.axay:kspigot:1.20.1'
+    compileOnly 'net.axay:kspigot:1.20.1'
 
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
     implementation 'org.mongodb:mongo-java-driver:3.12.14'
