--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,17 @@ repositories {
     maven {
         url = 'https://mvn.lumine.io/repository/maven-public/'
     }
+    maven {
+        url "https://libraries.minecraft.net"
+    }
 }
 
 dependencies {
     paperweight.paperDevBundle '1.20.1-R0.1-SNAPSHOT'
     compileOnly 'net.axay:kspigot:1.20.1'
+
+    //does nt work
+    compileOnly 'com.mojang:brigadier:1.0.18'
 
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
     implementation 'org.mongodb:mongo-java-driver:3.12.14'
@@ -24,16 +30,15 @@ dependencies {
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
 }
 
-test {
-    useJUnitPlatform()
-}
-
 kotlin {
     jvmToolchain(17)
 }
 
 
 tasks {
+    assemble {
+        dependsOn(reobfJar)
+    }
     compileJava {
         options.release.set(17)
     }
