--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,4 @@ api-version: 1.20
 main: me.proxui.structure.ChiccenAPI
 libraries:
   - net.axay:kspigot:1.20.1
+  - org.mongodb:mongo-java-driver:3.12.14
