--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,4 @@ main: me.proxui.structure.ChiccenAPI
 libraries:
   - net.axay:kspigot:1.20.1
   - org.mongodb:mongo-java-driver:3.12.14
+  - org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.6.0-RC
