--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.9.0'
-    id 'io.papermc.paperweight.userdev' version '1.5.5'
+    id 'io.papermc.paperweight.userdev' version '1.5.4'
 }
 
 group = 'me.proxui'
@@ -9,15 +9,18 @@ version = '0.1-SNAPSHOT'
 repositories {
     mavenCentral()
     maven {
-        url = 'https://mvn.lumine.io/repository/maven-public/'
+        url 'https://mvn.lumine.io/repository/maven-public/'
     }
     maven {
         url "https://libraries.minecraft.net"
     }
+    maven {
+        url "https://nexus.hc.to/content/repositories/pub_releases/"
+    }
 }
 
 dependencies {
-    paperweight.paperDevBundle '1.20.1-R0.1-SNAPSHOT'
+    paperweight.paperDevBundle("1.20.1-R0.1-SNAPSHOT")
     compileOnly 'net.axay:kspigot:1.20.1'
 
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
@@ -25,6 +28,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.comphenix.protocol/ProtocolLib
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+
+    // https://mvnrepository.com/artifact/net.milkbowl.vault/Vault
+    compileOnly 'net.milkbowl.vault:Vault:1.7.3'
 }
 
 kotlin {
@@ -36,6 +42,15 @@ tasks {
     assemble {
         dependsOn(reobfJar)
     }
+    compileJava {
+        options.release.set(17)
+    }
+    compileKotlin {
+        kotlinOptions.jvmTarget = "17"
+    }
+}
+
+tasks {
     compileJava {
         options.release.set(17)
     }
