--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven {
-            url 'https://papermc.io/repo/repository/maven-public/'
+            url 'https://repo.papermc.io/repository/maven-public/'
         }
     }
 }
